--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <!-- LINK CSS -->
-    <link rel="stylesheet" href="/styles/index.css" />
+    <link rel="stylesheet" href="./styles/index.css" />
     <title>Joaquina Beach-RESERVAS</title>
   </head>
   <body>
@@ -20,7 +20,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="#"
             ><img
-              src="/./multimedia/img/logo-joaquina.png"
+              src="./multimedia/img/logo-joaquina.png"
               alt="logo-la-joaquina"
           /></a>
           <button
@@ -40,21 +40,22 @@
                 <a
                   class="nav-link active"
                   aria-current="page"
-                  href="/index.html"
-                  >HOME</a
+                  href="./index.html"
                 >
+                  HOME
+                </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/servicios.html">SERVICIOS</a>
+                <a class="nav-link" href="./pages/servicios.html">SERVICIOS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/tarifas.html">TARIFAS</a>
+                <a class="nav-link" href="./pages/tarifas.html">TARIFAS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/galeria.html">GALERIA</a>
+                <a class="nav-link" href="./pages/galeria.html">GALERIA</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/reservas.html">RESERVAS</a>
+                <a class="nav-link" href="./pages/reservas.html">RESERVAS</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled" aria-disabled="true"></a>
