--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -11,18 +11,19 @@
       crossorigin="anonymous"
     />
     <!-- LINK CSS -->
-    <link rel="stylesheet" href="/styles/index.css" />
+    <link rel="stylesheet" href="./styles/index.css" />
     <title>Joaquina-Beach-SERVICIOS</title>
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary navbar">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"
-            ><img
-              src="/./multimedia/img/logo-joaquina.png"
+          <a class="navbar-brand" href="#">
+            <img
+              src="./multimedia/img/logo-joaquina.png"
               alt="logo-la-joaquina"
-          /></a>
+            />
+          </a>
           <button
             class="navbar-toggler"
             type="button"
@@ -40,21 +41,22 @@
                 <a
                   class="nav-link active"
                   aria-current="page"
-                  href="/index.html"
-                  >HOME</a
+                  href="./index.html"
                 >
+                  HOME
+                </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/servicios.html">SERVICIOS</a>
+                <a class="nav-link" href="./pages/servicios.html">SERVICIOS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/tarifas.html">TARIFAS</a>
+                <a class="nav-link" href="./pages/tarifas.html">TARIFAS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/galeria.html">GALERIA</a>
+                <a class="nav-link" href="./pages/galeria.html">GALERIA</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/reservas.html">RESERVAS</a>
+                <a class="nav-link" href="./pages/reservas.html">RESERVAS</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled" aria-disabled="true"></a>
@@ -69,15 +71,15 @@
         <section class="servicios-img">
           <img
             class="card-front"
-            src="/multimedia/fotos/reposera-1.jpg"
-            alt=""
+            src="./multimedia/fotos/reposera-1.jpg"
+            alt="area-de-relax"
           />
           <img
             class="card-back"
-            src="/multimedia/fotos/reposera-2.jpg"
-            alt=""
+            src="./multimedia/fotos/reposera-2.jpg"
+            alt="area-de-relax"
           />
-          <h4>DESAYUNO ARTESANAL</h4>
+          <h4>RELAX</h4>
           <p>
             Elaboraciones de categoría, servido en la comodidad de tu apart.
           </p>
@@ -85,68 +87,90 @@
         <section class="servicios-img">
           <img
             class="card-front"
-            src="/multimedia/fotos/desayuno-1.jpg"
+            src="./multimedia/fotos/desayuno-1.jpg"
             alt="servicio-de-desayuno-artesanal"
           />
           <img
             class="card-back"
-            src="/multimedia/fotos/desayuno-2.jpg"
+            src="./multimedia/fotos/desayuno-2.jpg"
             alt="servicio-de-desayuno-artesanal"
           />
+          <h4>DESAYUNO ARTESANAL</h4>
+          <p>
+            Elaboraciones de categoría, servido en la comodidad de tu apart.
+          </p>
+        </section>
+        <section class="servicios-img">
+          <img class="card-front" src="./multimedia/fotos/spa-1.jpg" alt="" />
+          <img class="card-back" src="./multimedia/fotos/spa-2.jpg" alt="" />
           <h4>SPA</h4>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
         </section>
         <section class="servicios-img">
-          <img class="card-front" src="/multimedia/fotos/spa-1.jpg" alt="" />
-          <img class="card-back" src="/multimedia/fotos/spa-2.jpg" alt="" />
-          <h4>SERVICIOS</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
-        </section>
-        <section class="servicios-img">
-          <img class="card-front" src="/multimedia/fotos/habit-1.jpg" alt="" />
-          <img class="card-back" src="/multimedia/fotos/habit-2.jpg" alt="" />
-          <h4>SERVICIOS</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
-        </section>
-        <section class="servicios-img">
           <img
             class="card-front"
-            src="/multimedia/fotos/comedor-1.jpg"
-            alt=""
+            src="./multimedia/fotos/habit-1.jpg"
+            alt="area-de-masajes"
           />
-          <img class="card-back" src="/multimedia/fotos/comedor-2.jpg" alt="" />
-          <h4>SERVICIOS</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
-        </section>
-        <section class="servicios-img">
-          <img class="card-front" src="/multimedia/fotos/hotel-2.jpg" alt="" />
-          <img class="card-back" src="/multimedia/fotos/hotel-1.jpg" alt="" />
-          <h4>SERVICIOS</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
-        </section>
-        <section class="servicios-img">
-          <img class="card-front" src="/multimedia/fotos/buceo-1.jpg" alt="" />
-          <img class="card-back" src="/multimedia/fotos/buceo-2.jpg" alt="" />
-          <h4>SERVICIOS</h4>
+          <img
+            class="card-back"
+            src="./multimedia/fotos/habit-2.jpg"
+            alt="area-de-masajes"
+          />
+          <h4>HABITACIONES</h4>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
         </section>
         <section class="servicios-img">
           <img
             class="card-front"
-            src="/multimedia/fotos/desayuno-1.jpg"
+            src="./multimedia/fotos/comedor-1.jpg"
+            alt="comedor-desayuno-almuerzo"
+          />
+          <img
+            class="card-back"
+            src="./multimedia/fotos/comedor-2.jpg"
+            alt="comedor-desayuno-almuerzo"
+          />
+          <h4>COMEDOR</h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
+        </section>
+        <section class="servicios-img">
+          <img
+            class="card-front"
+            src="./multimedia/fotos/hotel-2.jpg"
+            alt="imagenes-del-complejo"
+          />
+          <img
+            class="card-back"
+            src="./multimedia/fotos/hotel-1.jpg"
+            alt="imagenes-del-complejo"
+          />
+          <h4>COMPLEJO</h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
+        </section>
+        <section class="servicios-img">
+          <img class="card-front" src="./multimedia/fotos/buceo-1.jpg" alt="" />
+          <img class="card-back" src="./multimedia/fotos/buceo-2.jpg" alt="" />
+          <h4>ACTIVIDADES</h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
+        </section>
+        <section class="servicios-img">
+          <img
+            class="card-front"
+            src="./multimedia/fotos/desayuno-1.jpg"
             alt=""
           />
           <img
             class="card-back"
-            src="/multimedia/fotos/desayuno-2.jpg"
+            src="./multimedia/fotos/desayuno-2.jpg"
             alt=""
           />
           <h4>SERVICIOS</h4>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
         </section>
         <section class="servicios-img">
-          <img class="card-front" src="/multimedia/fotos/spa-1.jpg" alt="" />
-          <img class="card-back" src="/multimedia/fotos/spa-2.jpg" alt="" />
+          <img class="card-front" src="./multimedia/fotos/spa-1.jpg" alt="" />
+          <img class="card-back" src="./multimedia/fotos/spa-2.jpg" alt="" />
           <h4>SERVICIOS</h4>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
         </section>
