--- a/index.html
+++ b/index.html
@@ -11,18 +11,20 @@
       crossorigin="anonymous"
     />
     <!-- LINK CSS -->
-    <link rel="stylesheet" href="/styles/index.css" />
+    <link rel="stylesheet" href="./styles/index.css" />
     <title>Document</title>
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary navbar">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"
-            ><img
-              src="/./multimedia/img/logo-joaquina.png"
+          <a class="navbar-brand" href="#">
+            <img
+              src="./multimedia/img/logo-joaquina.png"
               alt="logo-la-joaquina"
-          /></a>
+            />
+          </a>
+
           <button
             class="navbar-toggler"
             type="button"
@@ -40,21 +42,22 @@
                 <a
                   class="nav-link active"
                   aria-current="page"
-                  href="/index.html"
-                  >HOME</a
+                  href="./index.html"
                 >
+                  HOME
+                </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/servicios.html">SERVICIOS</a>
+                <a class="nav-link" href="./pages/servicios.html">SERVICIOS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/tarifas.html">TARIFAS</a>
+                <a class="nav-link" href="./pages/tarifas.html">TARIFAS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/galeria.html">GALERIA</a>
+                <a class="nav-link" href="./pages/galeria.html">GALERIA</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/reservas.html">CONTACT</a>
+                <a class="nav-link" href="./pages/reservas.html">CONTACT</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled" aria-disabled="true"></a>
