--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -11,15 +11,15 @@
       crossorigin="anonymous"
     />
     <!-- LINK CSS -->
-    <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" href="../styles/index.css" />
     <title>Document</title>
   </head>
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary navbar">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="./">
           <img
-            src="./multimedia/img/logo-joaquina.png"
+            src="../multimedia/img/logo-joaquina.png"
             alt="logo-la-joaquina"
           />
         </a>
@@ -37,21 +37,25 @@
         <div class="collapse navbar-collapse link-navbar" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html"
-                >HOME
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="../index.html"
+              >
+                HOME
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/servicios.html">SERVICIOS</a>
+              <a class="nav-link" href="../pages/servicios.html">SERVICIOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/tarifas.html">TARIFAS</a>
+              <a class="nav-link" href="../pages/tarifas.html">TARIFAS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/galeria.html">GALERIA</a>
+              <a class="nav-link" href="../pages/galeria.html">GALERIA</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/reservas.html">RESERVAS</a>
+              <a class="nav-link" href="../pages/reservas.html">RESERVAS</a>
             </li>
             <li class="nav-item">
               <a class="nav-link disabled" aria-disabled="true"></a>
