--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -11,16 +11,16 @@
       crossorigin="anonymous"
     />
     <!-- LINK CSS -->
-    <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" href="../styles/index.css" />
     <title>Joaquina-Beach-SERVICIOS</title>
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary navbar">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="./">
             <img
-              src="./multimedia/img/logo-joaquina.png"
+              src="../multimedia/img/logo-joaquina.png"
               alt="logo-la-joaquina"
             />
           </a>
@@ -41,22 +41,22 @@
                 <a
                   class="nav-link active"
                   aria-current="page"
-                  href="./index.html"
+                  href="../index.html"
                 >
                   HOME
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./pages/servicios.html">SERVICIOS</a>
+                <a class="nav-link" href="../pages/servicios.html">SERVICIOS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./pages/tarifas.html">TARIFAS</a>
+                <a class="nav-link" href="../pages/tarifas.html">TARIFAS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./pages/galeria.html">GALERIA</a>
+                <a class="nav-link" href="../pages/galeria.html">GALERIA</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./pages/reservas.html">RESERVAS</a>
+                <a class="nav-link" href="../pages/reservas.html">RESERVAS</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled" aria-disabled="true"></a>
@@ -71,12 +71,12 @@
         <section class="servicios-img">
           <img
             class="card-front"
-            src="./multimedia/fotos/reposera-1.jpg"
+            src="../multimedia/fotos/reposera-1.jpg"
             alt="area-de-relax"
           />
           <img
             class="card-back"
-            src="./multimedia/fotos/reposera-2.jpg"
+            src="../multimedia/fotos/reposera-2.jpg"
             alt="area-de-relax"
           />
           <h4>RELAX</h4>
@@ -87,12 +87,12 @@
         <section class="servicios-img">
           <img
             class="card-front"
-            src="./multimedia/fotos/desayuno-1.jpg"
+            src="../multimedia/fotos/desayuno-1.jpg"
             alt="servicio-de-desayuno-artesanal"
           />
           <img
             class="card-back"
-            src="./multimedia/fotos/desayuno-2.jpg"
+            src="../multimedia/fotos/desayuno-2.jpg"
             alt="servicio-de-desayuno-artesanal"
           />
           <h4>DESAYUNO ARTESANAL</h4>
@@ -101,20 +101,20 @@
           </p>
         </section>
         <section class="servicios-img">
-          <img class="card-front" src="./multimedia/fotos/spa-1.jpg" alt="" />
-          <img class="card-back" src="./multimedia/fotos/spa-2.jpg" alt="" />
+          <img class="card-front" src="../multimedia/fotos/spa-1.jpg" alt="" />
+          <img class="card-back" src="../multimedia/fotos/spa-2.jpg" alt="" />
           <h4>SPA</h4>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
         </section>
         <section class="servicios-img">
           <img
             class="card-front"
-            src="./multimedia/fotos/habit-1.jpg"
+            src="../multimedia/fotos/habit-1.jpg"
             alt="area-de-masajes"
           />
           <img
             class="card-back"
-            src="./multimedia/fotos/habit-2.jpg"
+            src="../multimedia/fotos/habit-2.jpg"
             alt="area-de-masajes"
           />
           <h4>HABITACIONES</h4>
@@ -123,12 +123,12 @@
         <section class="servicios-img">
           <img
             class="card-front"
-            src="./multimedia/fotos/comedor-1.jpg"
+            src="../multimedia/fotos/comedor-1.jpg"
             alt="comedor-desayuno-almuerzo"
           />
           <img
             class="card-back"
-            src="./multimedia/fotos/comedor-2.jpg"
+            src="../multimedia/fotos/comedor-2.jpg"
             alt="comedor-desayuno-almuerzo"
           />
           <h4>COMEDOR</h4>
@@ -137,40 +137,44 @@
         <section class="servicios-img">
           <img
             class="card-front"
-            src="./multimedia/fotos/hotel-2.jpg"
+            src="../multimedia/fotos/hotel-2.jpg"
             alt="imagenes-del-complejo"
           />
           <img
             class="card-back"
-            src="./multimedia/fotos/hotel-1.jpg"
+            src="../multimedia/fotos/hotel-1.jpg"
             alt="imagenes-del-complejo"
           />
           <h4>COMPLEJO</h4>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
         </section>
         <section class="servicios-img">
-          <img class="card-front" src="./multimedia/fotos/buceo-1.jpg" alt="" />
-          <img class="card-back" src="./multimedia/fotos/buceo-2.jpg" alt="" />
+          <img
+            class="card-front"
+            src="../multimedia/fotos/buceo-1.jpg"
+            alt=""
+          />
+          <img class="card-back" src="../multimedia/fotos/buceo-2.jpg" alt="" />
           <h4>ACTIVIDADES</h4>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
         </section>
         <section class="servicios-img">
           <img
             class="card-front"
-            src="./multimedia/fotos/desayuno-1.jpg"
+            src="../multimedia/fotos/desayuno-1.jpg"
             alt=""
           />
           <img
             class="card-back"
-            src="./multimedia/fotos/desayuno-2.jpg"
+            src="../multimedia/fotos/desayuno-2.jpg"
             alt=""
           />
           <h4>SERVICIOS</h4>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
         </section>
         <section class="servicios-img">
-          <img class="card-front" src="./multimedia/fotos/spa-1.jpg" alt="" />
-          <img class="card-back" src="./multimedia/fotos/spa-2.jpg" alt="" />
+          <img class="card-front" src="../multimedia/fotos/spa-1.jpg" alt="" />
+          <img class="card-back" src="../multimedia/fotos/spa-2.jpg" alt="" />
           <h4>SERVICIOS</h4>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
         </section>
