arreglo logo url

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -17,7 +17,7 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary navbar">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./">
+        <a class="navbar-brand" href="/">
           <img
             src="../multimedia/img/logo-joaquina.png"
             alt="logo-la-joaquina"
