cambios en las mq servicios

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <section class="banner-info">
         <h3>TEXTO TEXTO</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
-        <a href="./pages/reservas.html">Hace tu reserva</a>
+        <a href="./pages/reservas.html">RESERVAR</a>
       </section>
     </div>
 
