cambios en galeria, servicios, reservas

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -60,12 +60,111 @@
             <li class="nav-item">
               <a class="nav-link disabled" aria-disabled="true"></a>
             </li>
+            v
           </ul>
         </div>
       </div>
     </nav>
   </header>
-  <main></main>
+  <main>
+    <div class="container-servicios">
+      <section class="servicios-img">
+        <img
+          class="card-front"
+          src="../multimedia/fotos/reposera-1.jpg"
+          alt="area-de-relax"
+        />
+        <img
+          class="card-back"
+          src="../multimedia/fotos/reposera-2.jpg"
+          alt="area-de-relax"
+        />
+        <h4>RELAX</h4>
+        <p></p>
+      </section>
+      <section class="servicios-img">
+        <img
+          class="card-front"
+          src="../multimedia/fotos/desayuno-1.jpg"
+          alt="servicio-de-desayuno-artesanal"
+        />
+        <img
+          class="card-back"
+          src="../multimedia/fotos/desayuno-2.jpg"
+          alt="servicio-de-desayuno-artesanal"
+        />
+        <h4>DESAYUNO ARTESANAL</h4>
+      </section>
+      <section class="servicios-img">
+        <img class="card-front" src="../multimedia/fotos/spa-1.jpg" alt="" />
+        <img class="card-back" src="../multimedia/fotos/spa-2.jpg" alt="" />
+        <h4>SPA</h4>
+      </section>
+      <section class="servicios-img">
+        <img
+          class="card-front"
+          src="../multimedia/fotos/habit-1.jpg"
+          alt="area-de-masajes"
+        />
+        <img
+          class="card-back"
+          src="../multimedia/fotos/habit-2.jpg"
+          alt="area-de-masajes"
+        />
+        <h4>HABITACIONES</h4>
+      </section>
+      <section class="servicios-img">
+        <img
+          class="card-front"
+          src="../multimedia/fotos/comedor-1.jpg"
+          alt="comedor-desayuno-almuerzo"
+        />
+        <img
+          class="card-back"
+          src="../multimedia/fotos/comedor-2.jpg"
+          alt="comedor-desayuno-almuerzo"
+        />
+        <h4>Restaurant</h4>
+      </section>
+      <section class="servicios-img">
+        <img
+          class="card-front"
+          src="../multimedia/fotos/hotel-2.jpg"
+          alt="imagenes-del-complejo"
+        />
+        <img
+          class="card-back"
+          src="../multimedia/fotos/hotel-1.jpg"
+          alt="imagenes-del-complejo"
+        />
+        <h4>COMPLEJO</h4>
+      </section>
+      <section class="servicios-img">
+        <img class="card-front" src="../multimedia/fotos/buceo-1.jpg" alt="" />
+        <img class="card-back" src="../multimedia/fotos/buceo-2.jpg" alt="" />
+        <h4>ACTIVIDADES</h4>
+      </section>
+      <section class="servicios-img">
+        <img
+          class="card-front"
+          src="../multimedia/fotos/desayuno-1.jpg"
+          alt=""
+        />
+        <img
+          class="card-back"
+          src="../multimedia/fotos/desayuno-2.jpg"
+          alt=""
+        />
+        <h4>PICINA</h4>
+      </section>
+      <section class="servicios-img">
+        <img class="card-front" src="../multimedia/fotos/spa-1.jpg" alt="" />
+        <img class="card-back" src="../multimedia/fotos/spa-2.jpg" alt="" />
+        <h4>SERVICIOS</h4>
+      </section>
+    </div>
+  </main>
+
   <footer>
     <h5>NUESTRAS REDES SOCIALES</h5>
     <ul>
