--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <a class="nav-link" href="./pages/galeria.html">GALERIA</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./pages/reservas.html">CONTACT</a>
+                <a class="nav-link" href="./pages/reservas.html">RESERVAS</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled" aria-disabled="true"></a>
@@ -67,16 +67,15 @@
         </div>
       </nav>
     </header>
-
-    <div class="banner-container">
-      <section class="banner-info">
-        <h3>TEXTO TEXTO</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
-        <a href="./pages/reservas.html">RESERVAR</a>
-      </section>
-    </div>
-
-    <main></main>
+    <main>
+      <div class="banner-container">
+        <section class="banner-info">
+          <h3>Todo lo que puedes imaginar...</h3>
+          <p>Lo hacemos realidad</p>
+          <a href="./pages/reservas.html">hace tu reserva</a>
+        </section>
+      </div>
+    </main>
     <footer>
       <h5>NUESTRAS REDES SOCIALES</h5>
       <ul>
