--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -67,119 +67,69 @@
       </nav>
     </header>
     <main>
-      <div class="container-servicios">
-        <section class="servicios-img">
-          <img
-            class="card-front"
-            src="../multimedia/fotos/reposera-1.jpg"
-            alt="area-de-relax"
-          />
-          <img
-            class="card-back"
-            src="../multimedia/fotos/reposera-2.jpg"
-            alt="area-de-relax"
-          />
-          <h4>RELAX</h4>
-          <p>
-            Elaboraciones de categoría, servido en la comodidad de tu apart.
-          </p>
-        </section>
-        <section class="servicios-img">
-          <img
-            class="card-front"
-            src="../multimedia/fotos/desayuno-1.jpg"
-            alt="servicio-de-desayuno-artesanal"
-          />
-          <img
-            class="card-back"
-            src="../multimedia/fotos/desayuno-2.jpg"
-            alt="servicio-de-desayuno-artesanal"
-          />
-          <h4>DESAYUNO ARTESANAL</h4>
-          <p>
-            Elaboraciones de categoría, servido en la comodidad de tu apart.
-          </p>
-        </section>
-        <section class="servicios-img">
-          <img class="card-front" src="../multimedia/fotos/spa-1.jpg" alt="" />
-          <img class="card-back" src="../multimedia/fotos/spa-2.jpg" alt="" />
-          <h4>SPA</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
-        </section>
-        <section class="servicios-img">
-          <img
-            class="card-front"
-            src="../multimedia/fotos/habit-1.jpg"
-            alt="area-de-masajes"
-          />
-          <img
-            class="card-back"
-            src="../multimedia/fotos/habit-2.jpg"
-            alt="area-de-masajes"
-          />
-          <h4>HABITACIONES</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
-        </section>
-        <section class="servicios-img">
-          <img
-            class="card-front"
-            src="../multimedia/fotos/comedor-1.jpg"
-            alt="comedor-desayuno-almuerzo"
-          />
-          <img
-            class="card-back"
-            src="../multimedia/fotos/comedor-2.jpg"
-            alt="comedor-desayuno-almuerzo"
-          />
-          <h4>COMEDOR</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
-        </section>
-        <section class="servicios-img">
-          <img
-            class="card-front"
-            src="../multimedia/fotos/hotel-2.jpg"
-            alt="imagenes-del-complejo"
-          />
-          <img
-            class="card-back"
-            src="../multimedia/fotos/hotel-1.jpg"
-            alt="imagenes-del-complejo"
-          />
-          <h4>COMPLEJO</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
-        </section>
-        <section class="servicios-img">
-          <img
-            class="card-front"
-            src="../multimedia/fotos/buceo-1.jpg"
-            alt=""
-          />
-          <img class="card-back" src="../multimedia/fotos/buceo-2.jpg" alt="" />
-          <h4>ACTIVIDADES</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
-        </section>
-        <section class="servicios-img">
-          <img
-            class="card-front"
-            src="../multimedia/fotos/desayuno-1.jpg"
-            alt=""
-          />
-          <img
-            class="card-back"
-            src="../multimedia/fotos/desayuno-2.jpg"
-            alt=""
-          />
-          <h4>SERVICIOS</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
-        </section>
-        <section class="servicios-img">
-          <img class="card-front" src="../multimedia/fotos/spa-1.jpg" alt="" />
-          <img class="card-back" src="../multimedia/fotos/spa-2.jpg" alt="" />
-          <h4>SERVICIOS</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
-        </section>
+      <img src="../multimedia/fotos/hotel-1.jpg" alt="" />
+
+      <div class="button-servicios">
+        <h2>LOS RECUERDOS DURARÁN PARA SIEMPRE</h2>
+        <span>Entrada</span>
+        <input type="date" name="entrada" id="entrada" />
+        <span>Salida</span>
+        <input type="date" name="salida" id="salida" />
       </div>
+      <section class="servicios">
+        <div class="servicios-1">
+          <h2>SERVICIOS</h2>
+          <ul>
+            <li>
+              <iconify-icon icon="pepicons-print:wifi"></iconify-icon>wi-fi
+            </li>
+            <li>
+              <iconify-icon
+                icon="material-symbols-light:pool-sharp"
+              ></iconify-icon
+              >Pileta climatizada y al aire libre
+            </li>
+            <li>
+              <iconify-icon icon="mdi:guest-room-outline"></iconify-icon
+              >Habitaciones simples y dobles
+            </li>
+            <li>
+              <iconify-icon icon="icons8:dining-room"></iconify-icon>Restaurant
+            </li>
+            <li><iconify-icon icon="map:spa"></iconify-icon></script>Spa</li>
+          </ul>
+        </div>
+
+        <div class="servicios-2">
+          <ul>
+            <li>
+              <iconify-icon icon="guidance:play-room"></iconify-icon>Sector de
+              juegos
+            </li>
+            <li><iconify-icon icon="material-symbols-light:fitness-center-rounded"></iconify-icon>Gimnasio</li>
+            <li>
+              <iconify-icon icon="clarity:car-line"></iconify-icon
+              >Estacionamiento
+            </li>
+            <li>
+              <iconify-icon icon="game-icons:swimfins"></iconify-icon
+              >Actividades acuáticas
+            </li>
+            <li>
+              <script
+                src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"
+              >
+                Auditorio
+              </script>
+
+              <iconify-icon icon="carbon:help-desk"></iconify-icon>Recpción las
+              24hs
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
+
     <footer>
       <h5>NUESTRAS REDES SOCIALES</h5>
       <ul>
