arreglos en las secciones servicios y galeria

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -60,18 +60,17 @@
             <li class="nav-item">
               <a class="nav-link disabled" aria-disabled="true"></a>
             </li>
-            v
           </ul>
         </div>
       </div>
     </nav>
   </header>
   <main>
-    <div class="container-servicios">
-      <section class="servicios-img">
+    <section class="container-galeria">
+      <div class="galeria-img">
         <img
           class="card-front"
-          src="../multimedia/fotos/reposera-1.jpg"
+          src="../multimedia/fotos/reposera-3.jpg"
           alt="area-de-relax"
         />
         <img
@@ -79,10 +78,9 @@
           src="../multimedia/fotos/reposera-2.jpg"
           alt="area-de-relax"
         />
-        <h4>RELAX</h4>
-        <p></p>
-      </section>
-      <section class="servicios-img">
+        <p>RELAX</p>
+      </div>
+      <div class="galeria-img">
         <img
           class="card-front"
           src="../multimedia/fotos/desayuno-1.jpg"
@@ -93,14 +91,22 @@
           src="../multimedia/fotos/desayuno-2.jpg"
           alt="servicio-de-desayuno-artesanal"
         />
-        <h4>DESAYUNO ARTESANAL</h4>
-      </section>
-      <section class="servicios-img">
-        <img class="card-front" src="../multimedia/fotos/spa-1.jpg" alt="" />
-        <img class="card-back" src="../multimedia/fotos/spa-2.jpg" alt="" />
-        <h4>SPA</h4>
-      </section>
-      <section class="servicios-img">
+        <p>DESAYUNO ARTESANAL</p>
+      </div>
+      <div class="galeria-img">
+        <img
+          class="card-front"
+          src="../multimedia/fotos/spa-1.jpg"
+          alt="sala-de-spa"
+        />
+        <img
+          class="card-back"
+          src="../multimedia/fotos/spa-2.jpg"
+          alt="sala-de-spa"
+        />
+        <p>SPA</p>
+      </div>
+      <div class="galeria-img">
         <img
           class="card-front"
           src="../multimedia/fotos/habit-1.jpg"
@@ -111,22 +117,22 @@
           src="../multimedia/fotos/habit-2.jpg"
           alt="area-de-masajes"
         />
-        <h4>HABITACIONES</h4>
-      </section>
-      <section class="servicios-img">
+        <p>HABITACIONES</p>
+      </div>
+      <div class="galeria-img">
         <img
           class="card-front"
           src="../multimedia/fotos/comedor-1.jpg"
-          alt="comedor-desayuno-almuerzo"
+          alt="restaurant-desayuno-almuerzo"
         />
         <img
           class="card-back"
           src="../multimedia/fotos/comedor-2.jpg"
-          alt="comedor-desayuno-almuerzo"
+          alt="restaurant-desayuno-almuerzo"
         />
-        <h4>Restaurant</h4>
-      </section>
-      <section class="servicios-img">
+        <p>RESTAURANT</p>
+      </div>
+      <div class="galeria-img">
         <img
           class="card-front"
           src="../multimedia/fotos/hotel-2.jpg"
@@ -137,32 +143,48 @@
           src="../multimedia/fotos/hotel-1.jpg"
           alt="imagenes-del-complejo"
         />
-        <h4>COMPLEJO</h4>
-      </section>
-      <section class="servicios-img">
-        <img class="card-front" src="../multimedia/fotos/buceo-1.jpg" alt="" />
-        <img class="card-back" src="../multimedia/fotos/buceo-2.jpg" alt="" />
-        <h4>ACTIVIDADES</h4>
-      </section>
-      <section class="servicios-img">
+        <p>COMPLEJO</p>
+      </div>
+      <div class="galeria-img">
+        <img
+          class="card-front"
+          src="../multimedia/fotos/buceo-1.jpg"
+          alt="imagenes-de-actividades-acuaticas"
+        />
+        <img
+          class="card-back"
+          src="../multimedia/fotos/buceo-2.jpg"
+          alt="imagenes-de-las-actividades-acuaticas"
+        />
+        <p>ACTIVIDADES</p>
+      </div>
+      <div class="galeria-img">
         <img
           class="card-front"
           src="../multimedia/fotos/desayuno-1.jpg"
-          alt=""
+          alt="desayuno-artesanal"
         />
         <img
           class="card-back"
           src="../multimedia/fotos/desayuno-2.jpg"
-          alt=""
+          alt="desayuno-artesanal"
         />
-        <h4>PICINA</h4>
-      </section>
-      <section class="servicios-img">
-        <img class="card-front" src="../multimedia/fotos/spa-1.jpg" alt="" />
-        <img class="card-back" src="../multimedia/fotos/spa-2.jpg" alt="" />
-        <h4>SERVICIOS</h4>
-      </section>
-    </div>
+        <p>PISCINA</p>
+      </div>
+      <div class="galeria-img">
+        <img
+          class="card-front"
+          src="../multimedia/fotos/spa-1.jpg"
+          alt="imagen-de-la-piscina"
+        />
+        <img
+          class="card-back"
+          src="../multimedia/fotos/spa-2.jpg"
+          alt="imagen-de-la-piscina"
+        />
+        <p>SERVICIOS</p>
+      </div>
+    </section>
   </main>
 
   <footer>
