--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="./multimedia/img/logo-joaquina.png"
+      type="image/x-icon"
+    />
     <!-- LINK BOOTSTRAP -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -12,7 +17,7 @@
     />
     <!-- LINK CSS -->
     <link rel="stylesheet" href="./styles/index.css" />
-    <title>Document</title>
+    <title>Joaquina Beach</title>
   </head>
   <body>
     <header>
@@ -68,13 +73,13 @@
       </nav>
     </header>
     <main>
-      <div class="banner-container">
-        <section class="banner-info">
-          <h3>Todo lo que puedes imaginar...</h3>
+      <section class="banner-container">
+        <div class="banner-info">
+          <h1>Todo lo que puedes imaginar...</h1>
           <p>Lo hacemos realidad</p>
           <a href="./pages/reservas.html">hace tu reserva</a>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
     <footer>
       <h5>NUESTRAS REDES SOCIALES</h5>
