--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="./multimedia/img/logo-joaquina.png"
+      type="image/x-icon"
+    />
     <!-- LINK BOOTSTRAP -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -12,7 +17,7 @@
     />
     <!-- LINK CSS -->
     <link rel="stylesheet" href="../styles/index.css" />
-    <title>Document</title>
+    <title>Joaquina Beach</title>
   </head>
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary navbar">
