--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="../multimedia/img/logo-joaquina.png"
+      type="image/x-icon"
+    />
     <!-- LINK BOOTSTRAP -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -12,7 +17,7 @@
     />
     <!-- LINK CSS -->
     <link rel="stylesheet" href="../styles/index.css" />
-    <title>Joaquina-Beach-SERVICIOS</title>
+    <title>Joaquina-Beach</title>
   </head>
   <body>
     <header>
@@ -74,11 +79,11 @@
         <span>Entrada</span>
         <input type="date" name="entrada" id="entrada" />
         <span>Salida</span>
-        <input type="date" name="salida" id="salida" />
+        <input type="date" name="salida" id="salida"/>
       </div>
       <section class="servicios">
+        <h1>SERVICIOS</h1>
         <div class="servicios-1">
-          <h2>SERVICIOS</h2>
           <ul>
             <li>
               <iconify-icon icon="pepicons-print:wifi"></iconify-icon>wi-fi
@@ -96,7 +101,8 @@
             <li>
               <iconify-icon icon="icons8:dining-room"></iconify-icon>Restaurant
             </li>
-            <li><iconify-icon icon="map:spa"></iconify-icon></script>Spa</li>
+            <li><iconify-icon icon="map:spa"></iconify-icon></script>Spa
+            </li>
           </ul>
         </div>
 
@@ -106,7 +112,8 @@
               <iconify-icon icon="guidance:play-room"></iconify-icon>Sector de
               juegos
             </li>
-            <li><iconify-icon icon="material-symbols-light:fitness-center-rounded"></iconify-icon>Gimnasio</li>
+            <li><iconify-icon icon="material-symbols-light:fitness-center-rounded"></iconify-icon>Gimnasio
+            </li>
             <li>
               <iconify-icon icon="clarity:car-line"></iconify-icon
               >Estacionamiento
@@ -116,12 +123,6 @@
               >Actividades acuáticas
             </li>
             <li>
-              <script
-                src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"
-              >
-                Auditorio
-              </script>
-
               <iconify-icon icon="carbon:help-desk"></iconify-icon>Recpción las
               24hs
             </li>
