organizando las carpetas de sass

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -79,10 +79,11 @@
         <span>Entrada</span>
         <input type="date" name="entrada" id="entrada" />
         <span>Salida</span>
-        <input type="date" name="salida" id="salida"/>
+        <input type="date" name="salida" id="salida" />
       </div>
       <section class="servicios">
         <h1>SERVICIOS</h1>
+
         <div class="servicios-1">
           <ul>
             <li>
@@ -101,32 +102,40 @@
             <li>
               <iconify-icon icon="icons8:dining-room"></iconify-icon>Restaurant
             </li>
-            <li><iconify-icon icon="map:spa"></iconify-icon></script>Spa
-            </li>
           </ul>
         </div>
 
         <div class="servicios-2">
           <ul>
+            <li><iconify-icon icon="map:spa"></iconify-icon>Spa</li>
             <li>
               <iconify-icon icon="guidance:play-room"></iconify-icon>Sector de
               juegos
             </li>
-            <li><iconify-icon icon="material-symbols-light:fitness-center-rounded"></iconify-icon>Gimnasio
-            </li>
             <li>
-              <iconify-icon icon="clarity:car-line"></iconify-icon
-              >Estacionamiento
-            </li>
-            <li>
-              <iconify-icon icon="game-icons:swimfins"></iconify-icon
-              >Actividades acuáticas
-            </li>
-            <li>
-              <iconify-icon icon="carbon:help-desk"></iconify-icon>Recpción las
-              24hs
+              <iconify-icon
+                icon="material-symbols-light:fitness-center-rounded"
+              ></iconify-icon
+              >Gimnasio
             </li>
           </ul>
+          </div>
+          <div class="servicios-3">
+            <ul>
+              <li>
+                <iconify-icon icon="clarity:car-line"></iconify-icon
+                >Estacionamiento
+              </li>
+              <li>
+                <iconify-icon icon="game-icons:swimfins"></iconify-icon
+                >Actividades acuáticas
+              </li>
+              <li>
+                <iconify-icon icon="carbon:help-desk"></iconify-icon>Recpción
+                las 24hs
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
     </main>
