--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     />
     <!-- LINK CSS -->
     <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Joaquina Beach</title>
   </head>
   <body>
