comenzando a pasando css a scss

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       crossorigin="anonymous"
     />
     <!-- LINK CSS -->
-    <link rel="stylesheet" href="./styles/index.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+
+    <link rel="stylesheet" href="./styles/main.css" />
     <title>Joaquina Beach</title>
   </head>
   <body>
@@ -26,6 +26,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img
+              class="navb-img"
               src="./multimedia/img/logo-joaquina.png"
               alt="logo-la-joaquina"
             />
