--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -71,7 +71,7 @@
         </div>
       </nav>
     </header>
-    <main>
+    <main class="main-servicios">
       <img src="../multimedia/fotos/hotel-1.jpg" alt="" />
 
       <div class="button-servicios">
@@ -119,23 +119,22 @@
               >Gimnasio
             </li>
           </ul>
-          </div>
-          <div class="servicios-3">
-            <ul>
-              <li>
-                <iconify-icon icon="clarity:car-line"></iconify-icon
-                >Estacionamiento
-              </li>
-              <li>
-                <iconify-icon icon="game-icons:swimfins"></iconify-icon
-                >Actividades acuáticas
-              </li>
-              <li>
-                <iconify-icon icon="carbon:help-desk"></iconify-icon>Recpción
-                las 24hs
-              </li>
-            </ul>
-          </div>
+        </div>
+        <div class="servicios-3">
+          <ul>
+            <li>
+              <iconify-icon icon="clarity:car-line"></iconify-icon
+              >Estacionamiento
+            </li>
+            <li>
+              <iconify-icon icon="game-icons:swimfins"></iconify-icon
+              >Actividades acuáticas
+            </li>
+            <li>
+              <iconify-icon icon="carbon:help-desk"></iconify-icon>Recpción las
+              24hs
+            </li>
+          </ul>
         </div>
       </section>
     </main>
