Agregue keywords y description a cada html

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="hotel de lujo, gastronomia gourmet, vista al mar, habitaciones elegantes"
+    />
+    <meta
+      name="description"
+      content="Descubre nuestros servicios excepcionales: hotel de lujo, gastronomía gourmet, habitaciones elegantes con vistas al mar. Tu experiencia será inolvidable."
+    />
     <link
       rel="shortcut icon"
       href="../multimedia/img/logo-joaquina.png"
