--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="hotel-de-lujo, playa, escapada-relajante, comodidades-exclusivas"
+    />
+    <meta
+      name="description"
+      content="tu refugio de lujo a pocos metros de la playa."
+    />
     <link
       rel="shortcut icon"
       href="./multimedia/img/logo-joaquina.png"
@@ -58,7 +66,7 @@
                 <a class="nav-link" href="./pages/servicios.html">SERVICIOS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./pages/tarifas.html">TARIFAS</a>
+                <a class="nav-link" href="./pages/tarifas.html">NOSOTROS</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./pages/galeria.html">GALERIA</a>
