--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="vistas panorámicas, arquitectura elegante,entorno natural, detalles de diseño"
+    />
+    <meta
+      name="description"
+      content="vistas panorámicas, el entorno natural que nos rodea y los detalles de diseño que hacen que nuestro hotel sea único."
+    />
     <link
       rel="shortcut icon"
       href="./multimedia/img/logo-joaquina.png"
@@ -54,7 +62,7 @@
               <a class="nav-link" href="../pages/servicios.html">SERVICIOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../pages/tarifas.html">TARIFAS</a>
+              <a class="nav-link" href="../pages/tarifas.html">NOSOTROS</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../pages/galeria.html">GALERIA</a>
