--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="hospitalidad excepcional, experiencia de viaje, compromiso con la excelencia"
+    />
+    <meta
+      name="description"
+      content=" Nuestro equipo está comprometido a brindarte una experiencia de viaje incomparable."
+    />
     <!-- LINK BOOTSTRAP -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -50,7 +58,7 @@
                 <a class="nav-link" href="../pages/servicios.html">SERVICIOS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../pages/tarifas.html">TARIFAS</a>
+                <a class="nav-link" href="../pages/nosotros.html">NOSOTROS</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="../pages/galeria.html">GALERIA</a>
@@ -66,121 +74,7 @@
         </div>
       </nav>
     </header>
-    <main>
-      <div class="form-container">
-        <h2 class="contact-logo">Joaquina <span>Beach</span></h2>
-        <!-- <a href="/multimedia/img/logo-joaquina.png"></a> -->
-        <section class="contact-form">
-          <form action="">
-            <label class="calendario" for="desde">
-              <p>Desde</p>
-              <input type="date" name="desde" id="desde" required />
-            </label>
-            <label class="calendario" for="hasta">
-              <p>Hasta</p>
-              <input type="date" name="hasta" id="hasta" required />
-            </label>
-            <label class="pasajeros-adultos" for="adultos">
-              <p>Adultos</p>
-              <input
-                type="number"
-                name="adultos"
-                id="adultos"
-                placeholder="0"
-                required
-              />
-            </label>
-            <label class="pasajeros-menores" for="menores">
-              <p>Menores</p>
-              <input
-                type="number"
-                name="menores"
-                id="menores"
-                placeholder="0"
-                required
-              />
-            </label>
-            <label for="nombre">
-              <p>Nombre</p>
-              <input
-                class="datos-personales"
-                type="text"
-                name="nombre"
-                id="nombre"
-                placeholder="Nombre"
-                autocomplete="on"
-                required
-              />
-            </label>
-            <label for="apellido">
-              <p>Apellido</p>
-              <input
-                class="datos-personales"
-                type="text"
-                name="apellido"
-                id="apellido"
-                placeholder="Apellido"
-                autocomplete="on"
-                required
-              />
-            </label>
-            <label for="tel">
-              <p>Teléfono</p>
-              <input
-                class="datos-personales"
-                type="tel"
-                name="tel"
-                id="tel"
-                pattern="{0-9}{3}-{0-9}{3}-{0-0}{4}"
-                placeholder="111-111-1111"
-                autocomplete="on"
-                required
-              />
-            </label>
-            <label for="email">
-              <p>Email</p>
-              <input
-                class="datos-personales"
-                type="email"
-                name="email"
-                id="email"
-                placeholder="joaquinabeach@hotel.com"
-                autocomplete="on"
-                required/>
-              
-            </label>
-            <section class="form-grid" >
-            <label>
-              <textarea
-                class="textarea"
-                name="comentarios"
-                id="comentarios"
-                cols="40"
-                rows="4"
-                placeholder="Cometarios"
-              ></textarea>
-            </section>
-            <section class="form-grid">
-            <input id="submit" type="submit" />
-          </section>
-          </form>
-          <section class="contact-info">
-            <h5>Contacto</h5>
-            <ul>
-              <li>
-                <iconify-icon icon="line-md:map-marker-filled"></iconify-icon>Dirección
-              </li>
-              <li>
-                <iconify-icon icon="lets-icons:phone-fill"></iconify-icon>Teléfono
-              </li>
-              <li><iconify-icon icon="fontisto:email"></iconify-icon>Email</li>
-            </ul>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <p>Lorem, ipsum dolor.</p>
-          </section>
-        </section>
-      </div>
-    </main>
+    <main></main>
     <footer>
       <h5>NUESTRAS REDES SOCIALES</h5>
       <ul>
