continuamos modificando seccion de rreservas

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -19,7 +19,7 @@
       crossorigin="anonymous"
     />
     <!-- LINK CSS -->
-    <link rel="stylesheet" href="../styles/index.css" />
+    <link rel="stylesheet" href="../scss/main.scss" />
     <title>Joaquina Beach-RESERVAS</title>
   </head>
   <body>
@@ -74,7 +74,28 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section>
+        <div>
+          <h1>Quienes somos</h1>
+          <h3>Nuestra historia</h3>
+          <img src="../multimedia/carrusel/slaider-2.jpg" alt="" />
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet,
+            laborum repudiandae? Id ullam quisquam eaque quae? Quod voluptas
+            eveniet exercitationem porro
+          </p>
+        </div>
+        <h3>Nuestra historia</h3>
+        <img src="../multimedia/fotos/reposera-1.jpg" alt="" />
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt ea
+          mollitia error enim blanditiis provident. Quasi quia laboriosam
+          provident. Sunt suscipit
+        </p>
+        <div></div>
+      </section>
+    </main>
     <footer>
       <h5>NUESTRAS REDES SOCIALES</h5>
       <ul>
