--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -76,11 +76,10 @@
     <main>
       <section class="form-container">
         <h1>Joaquina <span> Beach</span></h1>
-        <!-- <div class="form-reservas"> -->
         <div class="form-datos">
           <form class="fomulario">
             <div class="form-1 titulo">
-              <h3>Hace tu reservarva</h3>
+              <h3>Hace tu reserva</h3>
             </div>
 
             <div class="form-2 desde">
@@ -105,6 +104,7 @@
                   name="menores"
                   id="menores"
                   placeholder="0"
+                  min="0"
                   required
                 />
               </label>
@@ -118,6 +118,7 @@
                   name="adultos"
                   id="adultos"
                   placeholder="0"
+                  min="1"
                   required
                 />
               </label>
@@ -130,7 +131,7 @@
                   type="text"
                   name="nombre"
                   id="nombre"
-                  placeholder="ej. Maria"
+                  placeholder="Ej. Maria"
                   autocomplete="on"
                   required
                 />
@@ -144,7 +145,7 @@
                   type="text"
                   name="apellido"
                   id="apellido"
-                  placeholder="ej.Pérez"
+                  placeholder="Ej.Pérez"
                   autocomplete="on"
                   required
                 />
@@ -159,7 +160,7 @@
                   name="tel"
                   id="tel"
                   pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
-                  placeholder="111-111-1111"
+                  placeholder=" Ej 111-111-1111"
                   autocomplete="on"
                 />
               </label>
@@ -172,7 +173,7 @@
                   type="email"
                   name="email"
                   id="email"
-                  placeholder="ej.mariaperez@gmail.com"
+                  placeholder="Ej.mariaperez@gmail.com"
                   autocomplete="on"
                 />
               </label>
@@ -183,7 +184,7 @@
                 name="comentarios"
                 id="comentarios"
                 cols="15"
-                rows="5"
+                rows="4"
                 placeholder="Comentario"
               ></textarea>
             </div>
@@ -192,12 +193,12 @@
             </div>
           </form>
 
-          <div class="form-12 informacion">
+          <div class="informacion">
             <h3>Contacto</h3>
             <ul>
               <li>
                 <iconify-icon icon="line-md:map-marker-filled"></iconify-icon>
-                Av. p. Garibaldi 2323, Florianópolis
+                Garibaldi 23, Florianópolis
               </li>
               <li>
                 <iconify-icon icon="lets-icons:phone-fill"></iconify-icon>
@@ -205,141 +206,22 @@
               </li>
               <li>
                 <iconify-icon icon="fontisto:email"></iconify-icon>
-                joaquinabeach@hotel.com
+                joaquina.b@hotel.com
               </li>
             </ul>
-
-            <iframe
-              class="form-13 maps"
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28276.145475821224!2d-48.48067063213793!3d-27.639435267221405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95273c7a45caaf1b%3A0x45ba08dd85a69075!2sJoaquina%20Beach%20Hotel!5e0!3m2!1ses-419!2sar!4v1702488788922!5m2!1ses-419!2sar"
-              width="300"
-              height="120"
-              style="border: 0"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
           </div>
         </div>
+        <iframe
+          class="maps"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28276.145475821224!2d-48.48067063213793!3d-27.639435267221405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95273c7a45caaf1b%3A0x45ba08dd85a69075!2sJoaquina%20Beach%20Hotel!5e0!3m2!1ses-419!2sar!4v1702488788922!5m2!1ses-419!2sar"
+          width="600"
+          height="120"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
       </section>
-
-      <!-- <div class="form-container">
-        <h1 class="contact-logo">Joaquina <span>Beach</span></h1>
-        <section class="contact-form">
-          <form action="">
-            <label class="calendario" for="desde">
-              <p>Desde</p>
-              <input type="date" name="desde" id="desde" required />
-            </label>
-            <label class="calendario" for="hasta">
-              <p>Hasta</p>
-              <input type="date" name="hasta" id="hasta" required />
-            </label>
-            <label class="pasajeros-adultos" for="adultos">
-              <p>Adultos</p>
-              <input
-                type="number"
-                name="adultos"
-                id="adultos"
-                placeholder="0"
-                required
-              />
-            </label>
-            <label class="pasajeros-menores" for="menores">
-              <p>Menores</p>
-              <input
-                type="number"
-                name="menores"
-                id="menores"
-                placeholder="0"
-                required
-              />
-            </label>
-            <label for="nombre">
-              <p>Nombre</p>
-              <input
-                class="datos-personales"
-                type="text"
-                name="nombre"
-                id="nombre"
-                placeholder="Nombre"
-                autocomplete="on"
-                required
-              />
-            </label>
-            <label for="apellido">
-              <p>Apellido</p>
-              <input
-                class="datos-personales"
-                type="text"
-                name="apellido"
-                id="apellido"
-                placeholder="Apellido"
-                autocomplete="on"
-                required
-              />
-            </label>
-            <label for="tel">
-              <p>Teléfono</p>
-              <input
-                class="datos-personales"
-                type="tel"
-                name="tel"
-                id="tel"
-                pattern="{0-9}{3}-{0-9}{3}-{0-0}{4}"
-                placeholder="111-111-1111"
-                autocomplete="on"
-                required
-              />
-            </label>
-            <label for="email">
-              <p>Email</p>
-              <input
-                class="datos-personales"
-                type="email"
-                name="email"
-                id="email"
-                placeholder="joaquinabeach@hotel.com"
-                autocomplete="on"
-                required
-              />
-            </label>
-            <section class="form-grid">
-              <label>
-                <textarea
-                  class="textarea"
-                  name="comentarios"
-                  id="comentarios"
-                  cols="40"
-                  rows="4"
-                  placeholder="Comentarios"
-                ></textarea>
-              </label>
-            </section>
-            <section class="form-grid">
-              <label>
-                <input id="submit" type="submit" />
-              </label>
-            </section>
-          </form>
-          <section class="contact-info">
-            <h5>Contacto</h5>
-            <ul>
-              <li>
-                <iconify-icon icon="line-md:map-marker-filled"></iconify-icon
-                >Dirección
-              </li>
-              <li>
-                <iconify-icon icon="lets-icons:phone-fill"></iconify-icon
-                >Teléfono
-              </li>
-              <li><iconify-icon icon="fontisto:email"></iconify-icon>Email</li>
-            </ul>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <p>Lorem, ipsum dolor.</p>
-          </section>
-        </section>
-      </div> -->
     </main>
     <footer>
       <h5>NUESTRAS REDES SOCIALES</h5>
