finalice con la sección reservas

--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -20,6 +20,7 @@
     />
     <!-- LINK CSS -->
     <link rel="stylesheet" href="../styles/index.css" />
+    <link rel="stylesheet" href="../scss/main.scss" />
     <title>Document</title>
   </head>
   <body>
@@ -77,7 +78,7 @@
       <section class="form-container">
         <h1>Joaquina <span> Beach</span></h1>
         <div class="form-datos">
-          <form class="fomulario">
+          <form class="formulario">
             <div class="form-1 titulo">
               <h3>Hace tu reserva</h3>
             </div>
